z-index fix: modals show correctly again

--- a/web/app/style/opiskeluoikeus.less
+++ b/web/app/style/opiskeluoikeus.less
@@ -439,7 +439,7 @@
       .suoritus-tabs {
         margin-top: 20px;
         position:relative;
-        z-index: @z-index-base;
+
         &:before {
           display: block;
           position: absolute;
@@ -448,7 +448,7 @@
           width: 100%;
           border-bottom: 1px solid #AEAEAF;
           content: '';
-          z-index: -1;
+          z-index: 0;
         }
         margin-bottom: 30px;
         > ul {
@@ -464,6 +464,8 @@
             border-left: 1px solid #AEAEAE;
             border-right: 1px solid #AEAEAE;
             border-top: 2px solid @color-link-blue;
+            position: relative;
+            z-index: 1;
           }
           a {
             color: @color-link-blue;
